# synth-acp

./: .gitignore  .synth.json  .synth.toml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  manifest  pyproject.toml  synth-acp-perf-spec.md  test_update_output.txt
.beads/: issues.jsonl  metadata.json
.beads/formulas/: spec-driven.formula.toml
.github/workflows/: publish.yml
docs/: DESIGN.md.bak  DESIGN_UPDATED.md  synth_spec_redesign.md
docs/references/: acp_protocol.md  acp_sdk.md  design_gaps.md  sync_tui_mock.py  toad_agent.md  ux_cli_design.md
examples/: echo_agent.py  synth.example.json
scripts/: prob_config_options.py  probe_modes.py  test_terminal.py  test_updates.py
src/synth_acp/: __init__.py  __main__.py  cli.py  db.py  discovery.py  embeddings.py  harnesses.py
src/synth_acp/acp/: session.py  state_machine.py
src/synth_acp/broker/: broker.py  lifecycle.py  message_bus.py  permissions.py  poller.py  registry.py
src/synth_acp/data/harnesses/: claude.toml  gemini.toml  kiro.toml  opencode.toml
src/synth_acp/mcp/: notifier.py  server.py
src/synth_acp/models/: agent.py  commands.py  config.py  events.py  permissions.py  visibility.py
src/synth_acp/terminal/: manager.py
src/synth_acp/ui/: app.py  file_discovery.py  messages.py
src/synth_acp/ui/ansi/: __init__.py  _ansi.py  _ansi_colors.py  _sgr_styles.py  _stream_parser.py
src/synth_acp/ui/css/: app-heavy.tcss  app-leftbar.tcss  app-minimal.tcss  app.tcss  app.tcss.bak
src/synth_acp/ui/screens/: __init__.py  help.py  launch.py  permission.py  session_picker.py
src/synth_acp/ui/widgets/: agent_list.py  agent_message.py  conversation.py  copy_button.py  diff_view.py  expandable_section.py  gradient_bar.py  input_bar.py  message_queue.py  permission.py  plan_block.py  prompt_bubble.py  prompt_queue.py  shell_result.py  terminal.py  thought_block.py  throbber.py  tool_call.py
tests/: test_cli.py  test_db.py  test_discovery.py  test_embeddings.py  test_harness_registry.py  test_harnesses.py
tests/acp/: test_session.py  test_session_permission.py  test_state_machine.py
tests/broker/: test_broker.py  test_lifecycle.py  test_lifecycle_mode_arg.py  test_message_bus.py  test_permissions.py  test_poller.py  test_registry.py
tests/mcp/: test_notifier.py  test_server.py
tests/models/: test_agent.py  test_config.py  test_events.py
tests/terminal/: test_manager.py
tests/ui/: conftest.py  test_app.py  test_app_phase4.py  test_file_discovery.py
tests/ui/ansi/: test_ansi.py
tests/ui/screens/: test_help.py  test_launch.py  test_permission.py  test_session_picker.py
tests/ui/widgets/: test_agent_list.py  test_conversation.py  test_diff_view.py  test_expandable_section.py  test_gradient_bar.py  test_input_bar.py  test_message_queue.py  test_plan_block.py  test_prompt_queue.py  test_thought_block.py  test_tool_call.py
