[project]
name = "synth-acp"
version = "0.1.0"
description = "SYNTH — Synchronized Network of Teamed Harnesses over ACP"
requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol",
    "textual[syntax]>=8.2.1",
    "mcp>=1.0.0",
    "aiosqlite>=0.19.0",
    "typer>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[project.scripts]
synth = "synth_acp.cli:main"
synth-mcp = "synth_acp.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synth_acp"]

[tool.hatch.build.targets.wheel.force-include]
"src/synth_acp/data/harnesses" = "synth_acp/data/harnesses"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "A", "C4",
    "DTZ", "RET", "SIM", "ARG", "PTH", "PL", "RUF",
]
ignore = [
    "E501",
    "PLR0913",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "SIM102",
    "SIM105",
    "PLW0603",
    "PLW2901",
    "PLC0415",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "ARG001", "ARG002", "RUF059"]
"src/*" = ["T201"]
"src/synth_acp/cli.py" = ["T201", "B008"]
"src/synth_acp/acp/session.py" = ["ARG002"]  # ACP Client protocol requires unused params

[tool.ruff.lint.isort]
known-first-party = ["synth_acp"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]
