[project]
name = "synth-acp"
version = "0.1.0"
description = "SYNTH — Synchronized Network of Teamed Harnesses over ACP"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
readme = "README.md"
authors = [
    { name = "Derek Dardzinski", email = "dardzinski.derek@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "agent-client-protocol==0.9.0",
    "textual[syntax]>=8.2.1",
    "mcp>=1.0.0,<2",
    "aiosqlite>=0.19.0",
    "typer>=0.9",
    "textual-speedups>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.11",
    "textual-dev>=1.8.0",
    "ty>=0.0.1a7",
]

[project.scripts]
synth = "synth_acp.cli:main"
synth-mcp = "synth_acp.mcp.server:main"

[project.urls]
Homepage = "https://github.com/DerekDardzinski/synth-acp"
Repository = "https://github.com/DerekDardzinski/synth-acp"
Issues = "https://github.com/DerekDardzinski/synth-acp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synth_acp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "A", "C4",
    "DTZ", "RET", "SIM", "ARG", "PTH", "PL", "RUF",
]
ignore = [
    "E501",
    "PLR0913",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM114",
    "PLW0603",
    "PLW2901",
    "PLC0415",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "ARG001", "ARG002", "RUF059"]
"src/*" = ["T201"]
"src/synth_acp/cli.py" = ["T201", "B008"]
"src/synth_acp/acp/session.py" = ["ARG002"]  # ACP Client protocol requires unused params
"src/synth_acp/ui/ansi/*" = ["N806", "B019", "RUF012", "C416", "A001", "RUF009", "B905", "RUF001", "F601", "UP028", "PLC0205"]  # Vendored from toad — no logic changes (NFR-001)

[tool.ruff.lint.isort]
known-first-party = ["synth_acp"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]

# Vendored from toad — no logic changes (NFR-001)
[[tool.ty.overrides]]
include = ["src/synth_acp/ui/ansi/*"]

[tool.ty.overrides.rules]
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
